# postal-address

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.rst  RELEASE.md  address.py  pyproject.toml  setup.cfg  setup.py  tasks.py  test_address.py
.github/workflows/: test.yml
docs/: conf.py  development.rst  index.rst  install.rst  license.rst  modules.rst  postal_address.rst  postal_address.tests.rst
postal_address/: __init__.py  __version__.py  address.py  territory.py
postal_address/tests/: __init__.py  test_address.py  test_territory.py
