[tool.poetry]
name = "postal-address"
version = "22.4.1"
description = "Parse, normalize and render postal addresses."
authors = ["Scaleway <opensource@scaleway.com>"]
repository = "https://github.com/Scaleway/postal-address"
license = "BSD-2"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization",
    "Topic :: Utilities",
]
include = [
    "CHANGES.rst",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6.2"

boltons = "^21"
Faker = "^13"
importlib-metadata = { version = "^2.0", python = "<3.8" }
pycountry = "22.3.5"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"

# Linting and formatting
autoflake = "*"
black = "^22.1"
flake8 = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-pytest-style = "*"
flake8-use-fstring = "*"
flake8-simplify = "*"
flakeheaven = "*"
invoke = "^1.7.0"
isort = "*"
mypy = "*"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true

[tool.coverage.run]
source = ["postal_address"]
omit = ["*/tests/*"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false  # TODO: enable type check and set to true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.flakeheaven]
max_line_length = 88
exclude = ["README.rst", "CHANGES.rst", "docs/"]

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
flake8-black = ["+*"]
flake8-isort= ["+*"]
flake8-bugbear = ["+*"]
flake8-comprehensions = ["+*"]
flake8-simplify = ["+*", "-SIM106"]
flake8-use-fstring = ["+*", "-FS003"]
flake8-docstrings = ["+*", "-D10?", "-D401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
